tests/netconvert/errors/false_plain_output/options.netconvert
--edge-files=input_edges.edg.xml --node-files=input_nodes.nod.xml --output=net.net.xml --plain-output=output/plain
